# nrf-test-tool

./: .gitignore  README.md  nrf52840-pin-reroutes.hex
python/: example.py  send_logs.py
python/src/: board_controller.py  serial_handler.py
python/tests/: test_chips.py  test_commands.py
src/: serial_handler.py
zephyr/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
zephyr/src/: communication.c  communication.h  main.c
zephyr/src/drivers/: CMakeLists.txt  ads1015.cpp  ads1015.hpp  ads1015_interface.cpp  ads1015_interface.hpp  communication.c  communication.h  gpio.c  gpio.h  i2c_functions.c  i2c_functions.h  max14661.cpp  max14661.hpp  max_interface.cpp  max_interface.hpp  peripherals.c  peripherals.h  tca6424.cpp  tca6424.hpp  tca_interface.cpp  tca_interface.hpp
zephyr/src/peripherals/: CMakeLists.txt  gpio.c  gpio.h  i2c_funs.c  i2c_funs.h
